cmake_minimum_required(VERSION 3.27)
project (CPPDesignPatterns)

add_subdirectory(FactoryMethod)
add_subdirectory(AbstractFactory)
add_subdirectory(BuilderMethod)
add_subdirectory(AdapterMethod)
add_subdirectory(CommandMethod)
add_subdirectory(IteratorMethod)
add_subdirectory(ObserverMethod)
add_subdirectory(StrategyMethod)

add_subdirectory(SingletonMethod)
add_subdirectory(PrototypeMethod)
add_subdirectory(CompositeMethod)
add_subdirectory(DecoratorMethod)
add_subdirectory(FacadeMethod)
add_subdirectory(MediatorMethod)
add_subdirectory(StateMethod)
add_subdirectory(TemplateMethod)

add_subdirectory(BridgeMethod)
add_subdirectory(FlyweightMethod)
add_subdirectory(ProxyMethod)
add_subdirectory(ChainOfResponsibility)
add_subdirectory(MementoMethod)
add_subdirectory(VisitorMethod)